--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
 <img src="スクリーンショット 2020-01-18 14.48.35.png" width="300px">
   <img src="doublet_20aw_211.jpg" width="300px">
-  <img src="" width="300px">
-  <img src="" width="300px">
-  <img src="" width="300px">
+  <img src="collage.png" width="300px">
+  <img src="collage.png1" width="300px">
+  <img src="collage.png2" width="300px">
 </body>
 </html>
